[gd_scene load_steps=2 format=3 uid="uid://daeaihfaq7kn0"]

[ext_resource type="Script" path="res://addons/input_manager/Scripts/input_images.gd" id="1_x8l2y"]

[node name="Inputs" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
script = ExtResource("1_x8l2y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 2

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 2

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1
